@@ -1,8 +1,9 @@
 configdir = $(datadir)/tracker/modules
 
 config_DATA =						\
-	applications.xml				\
-	files.xml					\
-	gaim-conversations.xml
+	applications.module				\
+	evolution.module				\
+	files.module					\
+	gaim-conversations.module
 
 EXTRA_DIST = $(config_DATA)
